--- a/HW2CIS357/Base.lproj/Main.storyboard
+++ b/HW2CIS357/Base.lproj/Main.storyboard
@@ -78,14 +78,14 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfw-l3-w3l">
-                                <rect key="frame" x="118" y="206" width="106" height="15"/>
+                                <rect key="frame" x="118" y="206" width="251" height="15"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ecS-OE-xht">
-                                <rect key="frame" x="118" y="229" width="106" height="21"/>
+                                <rect key="frame" x="118" y="229" width="251" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -126,7 +126,11 @@
                                                 <action selector="Cancel:" destination="oS6-fK-xHj" id="wSs-e9-Udd"/>
                                             </connections>
                                         </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="Save" id="0s9-vF-44d"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Save" id="0s9-vF-44d">
+                                            <connections>
+                                                <action selector="onSaveButtonPress:" destination="oS6-fK-xHj" id="qZo-LM-D8P"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -150,6 +154,9 @@
                                 <color key="tintColor" systemColor="placeholderTextColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Kilometers"/>
+                                <connections>
+                                    <action selector="onDistanceUnitButton:" destination="oS6-fK-xHj" eventType="touchUpInside" id="cgb-6Y-2me"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iim-2v-GcF">
                                 <rect key="frame" x="256" y="143" width="121" height="35"/>
@@ -157,9 +164,16 @@
                                 <color key="tintColor" systemColor="placeholderTextColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Degrees"/>
+                                <connections>
+                                    <action selector="onBearingUnitButton:" destination="oS6-fK-xHj" eventType="touchUpInside" id="BaF-nf-tsg"/>
+                                </connections>
                             </button>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B8x-eO-gkK">
                                 <rect key="frame" x="0.0" y="626" width="393" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YMS-uE-cxf">
+                                <rect key="frame" x="0.0" y="562" width="393" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
                         </subviews>
@@ -168,6 +182,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="o9j-Ur-eyh"/>
                     <connections>
+                        <outlet property="bearingPicker" destination="YMS-uE-cxf" id="eLy-GX-8j4"/>
+                        <outlet property="bearingUnitsButton" destination="iim-2v-GcF" id="P7F-5r-gQv"/>
+                        <outlet property="distanceUnitsButton" destination="J1w-Ur-1gF" id="n0A-EW-2Ua"/>
                         <outlet property="picker" destination="B8x-eO-gkK" id="0Gi-MX-roE"/>
                     </connections>
                 </viewController>
@@ -199,7 +216,7 @@
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="placeholderTextColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29803921568627451" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29803921570000003" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
